--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                      I have alot of passion and this is one of them and I have filled it. All Thanks To GOD
                 </P>
             </div>
-                 <img src="/image/before.png" alt="picture of hair">
+                 <img src="./image/before.png" alt="picture of hair">
             </div>
 
             <br><br>
@@ -49,7 +49,7 @@
             <section class="services" id="services">
                 <div class="card">
                     <div class="box">
-                         <img src="/image/bridal.jpg" alt="picture of bridal hairstyles">
+                         <img src="./image/bridal.jpg" alt="picture of bridal hairstyles">
                          <h3>bridal hair</h3>
                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis beatae 
                             vitae vero repellendus! Quo dolorum nam veniam explicabo ducimus quis sapiente
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                     <div class="box">
-                         <img src="/image/makeup.jpg" alt="picture of makeup">
+                         <img src="./image/makeup.jpg" alt="picture of makeup">
                          <h3>Makeup</h3>
                         <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                             Fuga enim eaque totam consequuntur possimus. Commodi at in quae
@@ -66,7 +66,7 @@
                          </P>
                     </div>
                     <div class="box">
-                         <img src="/image/nails.jpg" alt="picture of nails">
+                         <img src="./image/nails.jpg" alt="picture of nails">
                          <h3>Make nails</h3>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Esse, consequuntur nam minus quasi aliquam incidunt atque doloribus iure 
@@ -74,7 +74,7 @@
                         </p>
                     </div>
                     <div class="box">
-                         <img src="/image/wigs.jpg" alt="picture of wigs">
+                         <img src="./image/wigs.jpg" alt="picture of wigs">
                          <h3>Make wigs</h3>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Distinctio nulla voluptates, quis provident, deleniti repellendus
@@ -83,7 +83,7 @@
                         </p>
                     </div>
                     <div class="box">
-                         <img src="/image/Natural-Hair-Products.jpg" alt="picture of hair wash">
+                         <img src="./image/Natural-Hair-Products.jpg" alt="picture of hair wash">
                          <h3>Good hair wash and treatment</h3>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Esse ab delectus, omnis quos minima aperiam minus, cumque velit,
@@ -92,7 +92,7 @@
                         </p>
                     </div>
                     <div class="box">
-                         <img src="/image/braids.jpg" alt="picture of braids">
+                         <img src="./image/braids.jpg" alt="picture of braids">
                          <h3>Make hair of any kind</h3>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Esse ab delectus, omnis quos minima aperiam minus, cumque velit,
